<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editAlbumRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAlbumActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/editAlbumHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:text="@string/editAlbumTitle"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editAlbumTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:hint="@string/albumTitleHint" />

        <EditText
            android:id="@+id/editAlbumArtistEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:hint="@string/albumArtistHint" />

        <Button
            android:id="@+id/updateAlbumButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:text="@string/updateAlbum" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
